complete dark mode, fixed projects grid and about me paragraph

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -10,6 +10,7 @@
     #projects {
         height: fit-content;
     }
+    
 }
 
 @media screen and (max-width: 1200px) {
@@ -44,6 +45,9 @@
     }
     .about-containers {
         margin-top: 0;
+    }
+    .text-container {
+        text-align: justify;
     }
 }
 
