--- a/style.css
+++ b/style.css
@@ -4,14 +4,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+/* Default Light Mode */
+:root {
+    --primary-color: white;
+    --primary-color-2: rgb(250, 250, 250);
+    --primary-color-3: rgb(181, 181, 181);
+    --background-color: rgb(255, 255, 255);
+    --secondary-color: black;
+    --secondary-color-2: rgb(85, 85, 85);
+    --button-background: rgb(53, 53, 53);
+    --button-text-hover: grey;
+    --button-border: rgb(53, 53, 53) 0.1rem solid;
+    --button-border-2: rgb(255, 255, 255) 0.1rem solid;
+    --container-border: rgb(163, 163, 163);
+}
+
+/* Dark Mode */
+[theme="dark"] {
+    --primary-color: black;
+    --primary-color-2: rgb(39, 39, 39);
+    --primary-color-3: rgb(74, 74, 74);
+    --background-color: rgb(33, 33, 33);
+    --secondary-color: white;
+    --secondary-color-2: rgb(170, 170, 170);
+    --button-background: rgb(202, 202, 202);
+    --button-text-hover: lightgrey;
+    --button-border: rgb(202, 202, 202) 0.1rem solid;
+    --button-border-2: rgb(0, 0, 0) 0.1rem solid;
+    --container-border: rgb(92, 92, 92);
+    }
 
 *{
     margin: 0;
     padding: 0;
 }
 
+h3 {
+    color: var(--secondary-color);
+}
+
 body {
     font-family: "Poppins", sans-serif;
+    background-color: var(--background-color);
 }
 
 html{
@@ -19,7 +53,7 @@ html{
 }
 
 p{
-    color: rgb(85, 85, 85);
+    color: var(--secondary-color-2);
 
 }
 
@@ -31,38 +65,44 @@ a, .btn{
 
 /* DESKTOP NAV */
 
-nav, 
-.nav-links{
+nav,
+.nav-links {
     display: flex;
+    align-items: center;
 }
 
 nav {
     justify-content: space-around;
-    align-items: center;
     height: 17vh;
 }
 
-.nav-links{
+.nav-links {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
 }
 
+nav li:last-child {
+    width: max-content;
+    display: flex;
+    margin: auto;
+    padding: 10px;
+}
+
 a{
-    color: black;
+    color: var(--secondary-color);
     text-decoration: none;
-    text-decoration-color: white;
+    text-decoration-color: var(--primary-color);
 }
 
 a:hover{
-    color: grey;
-    text-decoration: underline;
-    text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181);
+    color: var(--secondary-color);
+    text-decoration-color: var(--secondary-color);
 }
 
 .logo{
     font-size: 2rem;
+    color: var(--secondary-color);
 }
 
 .logo:hover{
@@ -92,7 +132,7 @@ a:hover{
 .hamburger-icon span{
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: var(--secondary-color);
     transition: all 0.3 ease-in-out;
 }
 
@@ -101,7 +141,7 @@ a:hover{
     z-index: 10;
     top: 100%;
     right: 0;
-    background-color: white;
+    background-color: var(--primary-color);
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -113,7 +153,7 @@ a:hover{
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
-    color: black;
+    color: var(--secondary-color);
     text-decoration: none;
     transition: all 0.3 ease-in-out;
 }
@@ -156,10 +196,10 @@ a:hover{
 
 section{
     padding-top: 4vh;
-    height: 96vh;
     margin: 0 10rem;
     box-sizing: border-box;
-    min-height: fit-content;
+    min-height: 100vh;
+    height: auto;
 }
 
 .section-container{
@@ -202,7 +242,9 @@ section{
     margin-bottom: 1rem;
 }
 
+
 .title{
+    color: var(--secondary-color);
     font-size: 3rem;
     text-align: center;
 }
@@ -239,7 +281,8 @@ section{
 
 .btn-color-1, 
 .btn-color-2{
-    border: rgb(53, 53, 53) 0.1rem solid;
+    border: var(--button-border);
+    color: var(--secondary-color-2);
 }
 
 .btn-color-1:hover, 
@@ -255,7 +298,7 @@ section{
 }
 
 .btn-color-1:hover{
-    background: rgb(0, 0, 0);
+    background: var(--secondary-color);
 }
 
 .btn-color-2{
@@ -263,7 +306,8 @@ section{
 }
 
 .btn-color-2:hover{
-    border: rgb(255, 255, 255) 0.1rem solid;
+    border: var(--button-border);
+    background: var(--secondary-color);
 }
 
 .btn-container{
@@ -289,8 +333,9 @@ section{
 
 
 .about-containers, .about-details-container{
-    display: flex;
-    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 2rem;
 }
 
 .about-pic{
@@ -307,10 +352,10 @@ section{
 .details-container{
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background: var(--primary-color-2);
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
+    border: var(--button-border);
+    border-color: var(--container-border);
     text-align: center;
 }
 
@@ -332,7 +377,7 @@ section{
 }
 
 .experience-sub-title{
-    color: rgb(85, 85, 85);
+    color: var(--secondary-color);
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -371,8 +416,8 @@ article .icon{
 }
 
 .color-container{
-    border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
+    border-color: var(--container-border);
+    background: var(--primary-color-2);
 }
 
 .project-img{
@@ -383,13 +428,13 @@ article .icon{
 
 .project-title{
     margin: 1rem;
-    color: black;
+    color: var(--secondary-color);
 }
 
 .project-btn{
     margin-top: 0.5rem;
-    color: black;
-    border-color: rgb(163, 163, 163);
+    color: var(--secondary-color);
+    border-color: var(--container-border);
 }
 
 /* CONTACT */
@@ -405,9 +450,9 @@ article .icon{
     display: flex;
     justify-content: center;
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
-    background: (250, 250, 250);
+    border: var(--button-border);
+    border-color: var(--container-border);
+    background: var(--background-color);
     margin: 2rem auto;
     padding: 0.5rem;
 }
